--- a/QlikSenseTest.html
+++ b/QlikSenseTest.html
@@ -22,6 +22,12 @@
 <body style="overflow: auto"><div id="CurrentSelections" class="qvobjects" style="position:relative; top:0; left:0; width:100%; height:35px;"> </div>
 <div class="flex-container">
 	<div id="QV01" class="qvobject"></div>
+	<div id="QV02" class="qvobject"></div>
+	<div id="QV03" class="qvobject"></div>
+	<div id="QV04" class="qvobject"></div>
+	<div id="QV05" class="qvobject"></div>
+	<div id="QV06" class="qvobject"></div>
+	<div id="QV07" class="qvobject"></div>
 </div>
 
 <!--Error Popup-->
