--- a/QlikSenseTest.html
+++ b/QlikSenseTest.html
@@ -29,7 +29,9 @@
 	<div id="QV06" class="qvobject"></div>
 	<div id="QV07" class="qvobject"></div>
 </div>
-
+<div class="IframeTest">
+	<iframe src='https://sense.flowconnect.nl/vp/single/?appid=6aeb4aa7-fb64-48bd-be28-c939cc4f13e3&sheet=b04a7503-945e-4aa9-a2de-b8702be8eb2c&opt=currsel&select=clearall' style='border:none;width:100%;height:100%;'></iframe>
+</div>
 <!--Error Popup-->
 <div id="popup">
 	<button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closePopup"><span aria-hidden="true">×</span></button>
