--- a/QlikSenseTest.html
+++ b/QlikSenseTest.html
@@ -19,6 +19,7 @@
 <div class="Test">
 	<h1>Qlik Sense Test</h1>
 </div>
+	<div id="chartarea"></div>
 <body style="overflow: auto"><div id="CurrentSelections" class="qvobjects" style="position:relative; top:0; left:0; width:100%; height:35px;"> </div>
 <div class="flex-container">
 	<div id="QV01" class="qvobject"></div>
